--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <title></title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/style.css">  <!--내가 만든 게 제일 아래에!-->
 </head>
 <body>
-<header>
+<header class="animate__animated animate__fadeInUp">
     <div class="container clearfix">
-      <div class="logo"><a href="#">LOGO</a></div>
+      <div class="logo animate__animated animate__fadeInUp animate__delay-500ms"><a href="#">LOGO</a></div>
       <nav>
          <ul class="main-nav clearfix">
             <li><a href="#weare"#>weare</a></li>
@@ -23,8 +24,8 @@
     </div>
 </header>
 
-<div class="hero">
-    <div class="text-box">
+<div class="hero animate__animated animate__fadeIn">
+    <div class="text-box animate__animated animate__rubberBand animate__delay-1s">
         <h1>김포 엘리시안 스키장</h1>
         <p>있을 것 같냐? 없다! 기대하지 마시오.</p>
     </div>
@@ -33,8 +34,8 @@
 <!-- WE ARE -->
 <section class="weare" id="weare">
     <div class="container">
-       <h1 class="text-center">WE ARE</h1>
-       <p class="sub-title text-center">We love you</p>
+       <h1 class="text-center animate__animated animate__rubberBand animate__delay-1s">WE ARE</h1>
+       <p class="sub-title text-center animate__animated animate__rubberBand animate__delay-2s">We love you</p>
        <p>국회는 상호원조 또는 안전보장에 관한 조약, 중요한 국제조직에 관한 조약, 우호통상항해조약, 주권의 제약에 관한 조약, 강화조약, 국가나 국민에게 중대한 재정적 부담을 지우는 조약 또는 입법사항에 관한 조약의 체결·비준에 대한 동의권을 가진다.</p>
        <p>모든 국민은 능력에 따라 균등하게 교육을 받을 권리를 가진다.</p>
        <p>국가는 농수산물의 수급균형과 유통구조의 개선에 노력하여 가격안정을 도모함으로써 농·어민의 이익을 보호한다.</p>
